<resources>
    <string name="app_name">Submission5</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="content_image">Poster Image</string>
    <string name="example_overview">The true story of Forrest Tucker, from his audacious escape from San Quentin at the age of 70 to an unprecedented string of heists that confounded authorities and enchanted the public. Wrapped up in the pursuit are a detective, who becomes captivated with Forrest’s commitment to his craft, and a woman, who loves him in spite of his chosen profession.</string>
    <string name="example_release_date">Released Data: 2018-01-01</string>
    <string name="example_title">Movie Title Here</string>
    <string name="label_search">Search</string>
    <string name="search_hint">Search Here...</string>
    <string name="label_favorite">Favorite</string>
    <string name="label_change_language">Change Language</string>
    <string name="label_movie">Movie</string>
    <string name="label_tv">Tv Show</string>
    <string name="appwidget_text">Widget Text</string>
    <string name="add_widget">Add widget</string>
    <string name="label_no_data">No Data</string>
    <string name="label_setting_notif">Notification Settings</string>
    <string name="pref_key_release_reminder">key_release_reminder</string>
    <string name="pref_key_daily_reminder">key_daily_reminder</string>
    <string name="setting_caption">Reminder Settings</string>
    <string name="favorite_caption">Favorite List</string>
    <string name="pref_release_summary">Reminder showing the movie that released today</string>
    <string name="pref_release_title">Release Reminder</string>
    <string name="pref_daily_title">Daily Reminder</string>
    <string name="pref_daily_summary">Reminder to return to app</string>
    <string name="label_release_date">Release Data</string>
    <string name="label_airing_date">Airing Date</string>
    <string name="content_delete_favorite">Delete Button</string>
    <string name="alert_delete_tv_title">Delete TV Show</string>
    <string name="alert_delete_tv_message">Are You Sure To Delete This Tv Show?</string>
    <string name="label_yes">Yes</string>
    <string name="label_no">No</string>
    <string name="alert_delete_movie_message">Are You Sure To Delete This Movie?</string>
    <string name="alert_delete_movie_title">Delete Movie</string>
    <string name="notif_inbox_title">New Notification From MovieDB</string>
    <string name="notif_inbox_summary">Check it out</string>
    <string name="detail_header_title">Movie Title Here</string>
    <string name="label_status">Status</string>
    <string name="label_genre">Genre</string>
    <string name="label_runtime_movie">Runtime</string>
    <string name="label_runtime_tv">Season / Episode</string>
    <string name="jam">hr</string>
    <string name="menit">min</string>
    <string name="content_img_cast">Cast Image</string>
    <string name="detail_header_cast">Cast</string>
    <string name="header_overview">Overview</string>
    <string name="label_score">User Score</string>
    <string name="label_rate">Rate It</string>
</resources>
