<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_main_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/label_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView|always" />
    <item
        android:id="@+id/menu_favorite"
        android:title="@string/label_favorite"
        android:icon="@drawable/ic_favorite_black_24dp"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_change_language"
        android:title="@string/label_change_language"
        android:icon="@drawable/ic_language_black_24dp"
        app:showAsAction="never" />
</menu>