<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingTop="@dimen/padding_vertical"
    android:paddingBottom="@dimen/padding_vertical"
    android:paddingLeft="@dimen/padding_horizontal"
    android:paddingRight="@dimen/padding_horizontal">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="130dp"
        android:id="@+id/img_poster"
        android:scaleType="fitXY"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:src="@drawable/ic_launcher_background"
        android:contentDescription="@string/content_image" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/layout_info"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/img_poster">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_label_title"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:text="@string/example_title" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_label_release_date"
            android:textSize="12sp"
            android:textStyle="italic"
            tools:text="@string/example_release_date" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_label_overview"
            android:layout_marginTop="10dp"
            android:ellipsize="end"
            android:maxLines="4"
            tools:text="@string/example_overview" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>