<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_overview_detail">

    <TextView
        android:id="@+id/tv_overview_label"
        android:text="@string/header_overview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryText"
        android:background="@color/colorPrimary"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_score_label"
        android:textColor="@color/colorPrimaryText"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/label_score"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_overview_label" />

    <TextView
        android:id="@+id/tv_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="@drawable/textround"
        android:padding="4dp"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        tools:text="59%"
        app:layout_constraintEnd_toEndOf="@+id/tv_score_label"
        app:layout_constraintStart_toStartOf="@+id/tv_score_label"
        app:layout_constraintTop_toBottomOf="@+id/tv_score_label" />

    <Button
        android:id="@+id/btn_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:drawableStart="@drawable/ic_favorite_black_24dp"
        android:drawablePadding="4dp"
        android:text="@string/label_favorite"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_score"
        app:layout_constraintStart_toEndOf="@+id/tv_score_label"
        app:layout_constraintTop_toTopOf="@+id/tv_score_label" />

    <Button
        android:id="@+id/btn_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:drawableStart="@drawable/ic_rate_review_black_24dp"
        android:drawablePadding="4dp"
        android:text="@string/label_rate"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_favorite"
        app:layout_constraintStart_toEndOf="@+id/btn_favorite"
        app:layout_constraintTop_toTopOf="@+id/btn_favorite" />

    <TextView
        android:id="@+id/tv_overview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textColor="@color/colorPrimaryText"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        tools:text="It has been ten years since The Battle of the Breach and the oceans are still, but restless. Vindicated by the victory at the Breach, the Jaeger program has evolved into the most powerful global defense force in human history. The PPDC now calls upon the best and brightest to rise up and become the next generation of heroes when the Kaiju threat returns."
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_score" />

</androidx.constraintlayout.widget.ConstraintLayout>